--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+h1 {
+	font-size: 45px;
+	color: aliceblue;
+	font-weight: 600;
+	text-shadow: 2px 2px 2px #333;
+}
+header {
+	background-color: brown;
+	padding: 8px 0;
+	text-align: center;
+}
+.app {
+	background: url("./images/1020188_l.jpg") no-repeat center bottom;
+	background-size: cover;
+	height: 100vh;
+}
+.taskCard {
+	width: 250px;
+	padding: 10px 25px;
+	margin: 10px 1%;
+	background-color: rgb(228, 228, 228);
+	border-radius: 5px;
+}
+.taskCardTitleInputArea {
+	margin: 10px auto;
+	cursor: pointer;
+}
+.taskCardTitleInput {
+	font-size: 1.1rem;
+	padding: 4px 6px;
+	border-radius: 3px;
+	border: none;
+	width: 90%;
+	outline: nones;
+}
+.task-add-input {
+	width: 100%;
+	border-color: rgb(114, 197, 172);
+	outline: none;
+	padding: 5px;
+	font-size: 18px;
+	border-radius: 5px;
+}
+.task-box {
+	display: flex;
+	justify-content: space-between;
+	padding: 8px 16px;
+	align-items: center;
+	background-color: #fff;
+	margin-top: 10px;
+	border-radius: 5px;
+	box-shadow: 1px 1px 3px #aaa;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.delete-btn {
+	border: none;
+	color: red;
+	cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.task-cards-area {
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-wrap: wrap;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.add-btn-area {
+	margin-left: 1%;
+	margin-top: 25px;
 }
-
-.App-link {
-  color: #61dafb;
+.add-btn {
+	padding: 10px 18px;
+	border-radius: 50%;
+	border: none;
+	font-size: 30px;
+	background-color: bisque;
+	box-shadow: 3px 3px 5px rgb(78, 78, 78);
+	cursor: pointer;
+	transition: 0.1s;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-btn:active {
+	box-shadow: none;
+	transform: translate(-3px -3px);
+}
+.task-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.task-delete-btn {
+	color: red;
+	border: none;
+	cursor: pointer;
+	background-color: transparent;
+	font-size: 16px;
 }
